updating content, header, and activities

--- a/index.html
+++ b/index.html
@@ -21,9 +21,8 @@
 	</header>
 	<article class="main">
 		<ul class="nav group">
-			<li><a href="#story" class="scroll" data-speed="1000">Our Story</a></li>
-			<li><a href="#party" class="scroll" data-speed="1000">Wedding Party</a></li>
-			<li><a href="#evening" class="scroll" data-speed="1000">The Evening</a></li>
+			<li><a href="#events" class="scroll" data-speed="1000">Wedding Events</a></li>
+			<li><a href="#attire" class="scroll" data-speed="1000">Attire</a></li>
 			<li><a href="#lodging" class="scroll" data-speed="1000">Lodging</a></li>
 			<li><a href="#transportation" class="scroll" data-speed="1000">Transportation</a></li>
 			<li><a href="#activities" class="scroll" data-speed="1000">Area Activities</a></li>
@@ -32,7 +31,7 @@
 
 		<section id="story">
 			<h4>Our Story</h4>
-			<h5>Chicago, 2010</h5>
+			<h5>Chicago, March 2010</h5>
 			<ol>
 				<li>girl meets boy’s stepmom.</li>
 				<li>girl sends Facebook message to boy about the weather and giggles.</li>
@@ -40,20 +39,20 @@
 				<li>boy and girl meet.</li>
 				<li>spring turns to summer.</li>
 				<li>boy and girl fall in love.</li>
-				<li>boy moves to Chicago.</li>
+				<li>boy moves back to Chicago.</li>
 				<li>boy and girl move in together.</li>
 				<li>boy politely asks girl to marry him.</li>
 				<li>boy and girl move to Colorado.</li>
 			</ol>
-			<h5>Beaver Creek, 2015</h5>
+			<h5>Beaver Creek, March 2015</h5>
 			<ol>
 				<li>boy and girl get married.</li>
-				<li>husband and wife party with their family and friends in a cabin on a mountain.</li>
+				<li>husband and wife celebrate with their family and friends.</li>
 			</ol>
 		</section>	
 			
 		<section id="party">
-			<h4>Wedding Party</h4>
+			<h4>The Wedding Party</h4>
 			<ol>
 				<li>Officiant – Lori Sassali</li>
 				<li>Matron of Honor- Hannah Emanuel</li>
@@ -65,9 +64,19 @@
 			</ol>
 		</section>
 
-		<section id="evening">
-			<h4>The Evening</h4>
-			<p>The ceremony and reception will take place at Allie’s Cabin on Beaver Creek Mountain.</p>
+		<section id="events">
+			<h4>Wedding Events</h4>
+			
+			<h5>Thursday</h5>
+			<h6>Weclome Evening</h6>
+
+
+
+			<h5>Friday</h5>
+			<h6>Wedding Day</h6>
+			<p>The ceremony and reception will both take place at Allie’s Cabin on Beaver Creek Mountain.</p>
+			<p>Set amidst a peaceful aspen grove, Allie's Cabin offers fine dining with spectacular views of Beaver Creek Village and the surrounding valley. The cabin is named after Allie Townsend who was known in the 19th century as the "First Lady" of Beaver Creek. She was the widow of George Townsend, the first settler of Beaver Creek.</p>
+			<p>The menu features a myriad of contemporary regional cuisine including prime aged meats, game, fish and fowl. The cabin is hewn from stacked, rough-sawn timber with mountain-style architecture, and features a large, sunny deck adjacent to a quaint bar. The interior is cozy and welcoming, complete with rustic wooden tables, an eclectic collection of fixtures, and furniture evocative of the era in which Allie lived.</p>
 			<h5>General Timeline:</h5>
 			<ol>
 				<li>5:45 – Sleigh ride up to Allie’s Cabin</li>
@@ -75,7 +84,18 @@
 				<li>7:00 – Dinner and dancing</li>
 			</ol>
 			<p>A shuttle will be available at 5:30 to take guests from The Christie Lodge to Beaver Creek Centennial Station where the sleigh will pick you up. You’ll have the same service on the way back home. Show up, sit back, and enjoy the ride.</p>
+
+
+
+			<h5>Saturday</h5>
+			<h6>Ski, Stay, & Play</h6>
+
+			
 			<p>*Allie’s Cabin and the Christie Lodge are both pet free and smoke free environments.</p>
+		</section>
+
+		<section id="attire">
+			<h4>Attire</h4>
 			<h5>What to Wear:</h5>
 			<p>March is Colorado’s snowiest month, and Allie’s Cabin is only accessible by sleigh. Be sure to wear your coat, bring snow boots, and don’t forget your mittens! There is a boot room in the cabin where you can store your warm clothes and change into your party shoes!</p>
 		</section>
@@ -115,6 +135,7 @@
 
 		<section id="activities" class="group">
 			<h4>Area Activities</h4>
+			<h5>Ski, Stay, & Play</h5>
 			<p>We chose to have our wedding on a Friday so that our guests can plan to explore and enjoy all that the Vail Valley has to offer. On Saturday, Renee and Russell will be <a href="http://www.beavercreek.com/" target="_blank">skiing Beaver Creek</a>, and others plan to go tubing down the <a href="http://www.beavercreek.com/activitiesdetail/bc+-+tubing.axd" target="_blank">Haymaker Tubing Hill</a>. Interested? </p>
 			<div class="activity">
 				<h5>To Do:</h5>
