moved nav to fixed up top

--- a/index.html
+++ b/index.html
@@ -13,14 +13,7 @@
 </head>
 <body>
 
-<div class="container">
-	<header>
-		<h1 class="press-heavy">Renee &amp; Russell</h1>
-		<h2 class="press-light">March 6, 2015</h2>
-		<h3 class="press-light">Beaver Creek, Colorado</h3>
-	</header>
-	<article class="main">
-		<ul class="nav group">
+<ul class="nav group" id="trial">
 			<li><a href="#events" class="scroll" data-speed="1000">Wedding Events</a></li>
 			<li><a href="#attire" class="scroll" data-speed="1000">Attire</a></li>
 			<li><a href="#lodging" class="scroll" data-speed="1000">Lodging</a></li>
@@ -28,6 +21,16 @@
 			<li><a href="#activities" class="scroll" data-speed="1000">Area Activities</a></li>
 			<li><a href="#registry" class="scroll" data-speed="1000">Registry</a></li>
 		</ul>
+
+<div class="container">
+
+	<header>
+		<h1 class="press-heavy">Renee &amp; Russell</h1>
+		<h2 class="press-light">March 6, 2015</h2>
+		<h3 class="press-light">Beaver Creek, Colorado</h3>
+	</header>
+	<article class="main">
+		
 
 		<section id="story">
 			<h4>Our Story</h4>
