changed nav slightly

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-<ul class="nav group" id="trial">
+<ul class="nav group">
 			<li><a href="#events" class="scroll" data-speed="1000">Wedding Events</a></li>
 			<li><a href="#attire" class="scroll" data-speed="1000">Attire</a></li>
 			<li><a href="#lodging" class="scroll" data-speed="1000">Lodging</a></li>
