adjusted wedding party

--- a/index.html
+++ b/index.html
@@ -42,39 +42,24 @@
 			<!-- <h4>The Proposal</h4>
 			
 			<p class="justify">On Friday, August 30, 2013, around 3:00, my boss announced that everyone should start the weekend early and head home. I had no idea what I would do with my afternoon, so when I texted Russell and he responded “Nice! What are you going to do? Head home?” I responded, “I don’t know! The world is my oyster!” I decided to just take my time commuting and head home. Normally, the walk from the Blue Line took about 8 minutes – but that day, I was enjoying the weather, so it took about 20. When I arrived at the apartment, I noticed that the door was unlocked. I opened the door, panicked a little, and said “HELLO??” No one answered. I walked inside and was sure I was going to be attacked. I felt that panic for about 20 seconds, until I noticed that music was on and the dishes were done. From behind me, I heard “Hello!” and I turned around and Russell was there. He told me he had a very busy day and suggested we go outside to the backyard. Our apartment had a beautiful garden in the back, and when we walked out I noticed there were flowers and bottles of wine waiting. I immediately started to cry and I’m not even sure if he fully got the words “will you marry me” out before I started screaming “YES!” One of my most favorite things about the day (there are many) was that we kept the moment private for a few hours. We didn’t rush to tell anyone. We opened a bottle of wine, had some drinks, went to dinner, and just reveled in our own excitement for a bit. It was amazing. When we finally started sharing the news, it was so fun to enjoy other people’s excitement! I love Russell so much, he is everything I have ever wanted in a husband, and I am so excited to be his wife!</p> -->
-
-
-			<!-- <h5>Chicago, March 2010</h5>
-			<ol>
-				<li>girl meets boy’s stepmom.</li>
-				<li>girl sends Facebook message to boy about the weather and giggles.</li>
-				<li>boy laughs to himself because girl’s message is …terrible.</li>
-				<li>boy and girl meet.</li>
-				<li>spring turns to summer.</li>
-				<li>boy and girl fall in love.</li>
-				<li>boy moves back to Chicago.</li>
-				<li>boy and girl move in together.</li>
-				<li>boy politely asks girl to marry him.</li>
-				<li>boy and girl move to Colorado.</li>
-			</ol>
-			<h5>Beaver Creek, March 2015</h5>
-			<ol>
-				<li>boy and girl get married.</li>
-				<li>husband and wife celebrate with their family and friends.</li>
-			</ol> -->
 		</section>	
 			
 		<section id="party">
 			<h4>The Wedding Party</h4>
-			<ol>
-				<li>Officiant – Lori Sassali</li>
-				<li>Matron of Honor- Hannah Emanuel</li>
-				<li>Best Man – Benjamin Cooper</li>
-				<li>Bridesmaid- Ellen Emanuel</li>
-				<li>Groomsman – Jon Szerszen</li>
-				<li>Flower Girl – Bella Sassali</li>
-				<li>Usher – Michael Ripaldi</li>
-			</ol>
+			<h6>Officiant – Lori Sassali</h6>
+			<div class="group trial">
+				<ol class="party-male">
+					<li>Best Man – Benjamin Cooper</li>
+					<li>Groomsman – Jon Szerszen</li>
+					<li>Usher – Michael Ripaldi</li>
+				</ol>
+				<ol class="party-female">
+					<li>Matron of Honor- Hannah Cook</li>
+					<li>Bridesmaid- Ellen Emanuel</li>
+					<li>Flower Girl – Bella Sassali</li>
+				</ol>
+			</div>
+			
 		</section>
 
 		<section id="events">
