adjusted sizing of wedding party

--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
 	<header>
 		<h1 class="press-heavy">Renee &amp; Russell</h1>
 		<h2 class="press-light">March 6, 2015</h2>
-		<h3 class="press-light">Beaver Creek, Colorado</h3>
+		<h2 class="press-light">Beaver Creek, Colorado</h2>
 	</header>
 	<article class="main">
 		
 
 		<section id="story">
 			<h4>Our Story</h4>
-			<p class="justify">Our story begins in 2010 in a little hair salon in the Lincoln Park neighborhood of Chicago where Renee was working with Sara, Russell’s stepmom. Sara often talked to Renee about Russell, her hilarious and smart stepson who lived in Michigan. Finally, Renee’s interest was peaked, and she decided to send Russell a Facebook message. Over the next few months, Renee and Russell travelled between Michigan and Illinois, and eventually, Russell moved back to his hometown of Chicago. Russell and Renee moved in to a charming little Wicker Park apartment in May of 2012. On Friday, August 30, 2013, Russell and Renee got engaged! After much discussion and exploration, we decided to make Colorado our new home, and moved to Broomfield in April of 2014. We are so excited for our future together and can’t wait to share our special day with you!</p>
+			<p class="justify">Our story begins in 2010 in a little hair salon in the Lincoln Park neighborhood of Chicago where Renee was working with Sara, Russell’s stepmom. Sara often talked to Renee about Russell, her hilarious and smart stepson who lived in Michigan. Finally, Renee’s interest was peaked, and she decided to send Russell a Facebook message. Over the next few months, Renee and Russell travelled between Michigan and Illinois, and eventually, Russell moved back to his hometown of Chicago. Russell and Renee moved in to a charming little Wicker Park apartment in May of 2012. On Friday, August 30, 2013, Russell and Renee got engaged! After much discussion and exploration, we decided to make Colorado our new home and moved to Broomfield in April of 2014. We are so excited for our future together and can’t wait to share our special day with you!</p>
 
 			<!-- <h4>The Proposal</h4>
 			
@@ -46,18 +46,26 @@
 			
 		<section id="party">
 			<h4>The Wedding Party</h4>
-			<h6>Officiant – Lori Sassali</h6>
+			<h6>Lori Sassali, <em>Officiant</em></h6>
 			<div class="group trial">
-				<ol class="party-male">
-					<li>Best Man – Benjamin Cooper</li>
-					<li>Groomsman – Jon Szerszen</li>
-					<li>Usher – Michael Ripaldi</li>
-				</ol>
-				<ol class="party-female">
-					<li>Matron of Honor- Hannah Cook</li>
-					<li>Bridesmaid- Ellen Emanuel</li>
-					<li>Flower Girl – Bella Sassali</li>
-				</ol>
+
+				<div class="party-male">
+					<h3>The Men</h3>
+					<ol>
+						<li>Benjamin Cooper, <em>Best Man</em></li>
+						<li>Jon Szerszen, <em>Groomsman</em></li>
+						<li>Michael Ripaldi, <em>Usher</em></li>
+					</ol>
+				</div>
+
+				<div class="party-female">
+					<h3>The Women</h3>
+					<ol>
+						<li>Hannah Cook, <em>Matron of Honor</em></li>
+						<li>Ellen Emanuel, <em>Bridesmaid</em></li>
+						<li>Bella Sassali, <em>Flower Girl</em></li>
+					</ol>
+				</div>
 			</div>
 			
 		</section>
