removed header and added style to fixed nav

--- a/index.html
+++ b/index.html
@@ -27,13 +27,17 @@
 
 <div class="container">
 
-	<header>
+	<!-- <header>
 		<h1 class="press-heavy">Renee &amp; Russell</h1>
 		<h2 class="press-light">March 6, 2015</h2>
 		<h2 class="press-light">Beaver Creek, Colorado</h2>
-	</header>
+	</header> -->
+	
 	<article class="main">
 		
+		<h1 class="press-heavy">Renee &amp; Russell</h1>
+		<h2 class="press-light">March 6, 2015</h2>
+		<h2 class="press-light">Beaver Creek, Colorado</h2>
 
 		<section id="story">
 			<h4>Our Story</h4>
