added three columns for the weekend events

--- a/index.html
+++ b/index.html
@@ -77,28 +77,48 @@
 		<section id="events">
 			<h4>Wedding Events</h4>
 			
-			<h5>Thursday</h5>
-			<h6>Weclome Evening</h6>
+			<div class="group">
+				<div class="pull">
+					<h3>Welcome Evening</h3>
+					<ol>
+						<li>Thursday, March 5, 2015</li>
+						<li>The Christie Lodge</li>
+						<li>Time TBD</li>
+					</ol>
+					<p>If you plan to arrive on Thursday, we hope you'll join us for a casual and relaxing evening at the lodge. Check back later for more details.</p>
+				</div>
+			
+				<div class="pull">
+					<h3>Wedding Day</h3>
+					<ol>
+						<li>Friday, March 6, 2015</li>
+						<li>Allie's Cabin</li>
+						<li>Sleigh departs at 5:30pm</li>
+					</ol>
+					<p>The ceremony and reception will both take place at Allie’s Cabin on Beaver Creek Mountain.</p>
+					<p>Set amidst a peaceful aspen grove, Allie's Cabin offers fine dining with spectacular views of Beaver Creek Village and the surrounding valley. The cabin is named after Allie Townsend who was known in the 19th century as the "First Lady" of Beaver Creek. She was the widow of George Townsend, the first settler of Beaver Creek.</p>
+					<p>The menu features a myriad of contemporary regional cuisine including prime aged meats, game, fish and fowl. The cabin is hewn from stacked, rough-sawn timber with mountain-style architecture, and features a large, sunny deck adjacent to a quaint bar. The interior is cozy and welcoming, complete with rustic wooden tables, an eclectic collection of fixtures, and furniture evocative of the era in which Allie lived.</p>
+					<p>General Timeline:</p>
+					<ol>
+						<li>5:45 – Sleigh ride up to Allie’s Cabin</li>
+						<li>6:30 - Ceremony</li>
+						<li>7:00 – Dinner and dancing</li>
+					</ol>
+					<p>A shuttle will be available at 5:30 to take guests from The Christie Lodge to Beaver Creek Centennial Station where the sleigh will pick you up. You’ll have the same service on the way back home. Show up, sit back, and enjoy the ride.</p>
+				</div>
+			
+				<div class="pull">
+					<h3>Ski, Stay, & Play</h3>
+						<ol>
+							<li>Saturday, March 7, 2015</li>
+							<li>Vail Valley</li>
+							<li>You are free all day</li>
+						</ol>
+				</div>
+
+			</div>
 
 
-
-			<h5>Friday</h5>
-			<h6>Wedding Day</h6>
-			<p>The ceremony and reception will both take place at Allie’s Cabin on Beaver Creek Mountain.</p>
-			<p>Set amidst a peaceful aspen grove, Allie's Cabin offers fine dining with spectacular views of Beaver Creek Village and the surrounding valley. The cabin is named after Allie Townsend who was known in the 19th century as the "First Lady" of Beaver Creek. She was the widow of George Townsend, the first settler of Beaver Creek.</p>
-			<p>The menu features a myriad of contemporary regional cuisine including prime aged meats, game, fish and fowl. The cabin is hewn from stacked, rough-sawn timber with mountain-style architecture, and features a large, sunny deck adjacent to a quaint bar. The interior is cozy and welcoming, complete with rustic wooden tables, an eclectic collection of fixtures, and furniture evocative of the era in which Allie lived.</p>
-			<h5>General Timeline:</h5>
-			<ol>
-				<li>5:45 – Sleigh ride up to Allie’s Cabin</li>
-				<li>6:30 - Ceremony</li>
-				<li>7:00 – Dinner and dancing</li>
-			</ol>
-			<p>A shuttle will be available at 5:30 to take guests from The Christie Lodge to Beaver Creek Centennial Station where the sleigh will pick you up. You’ll have the same service on the way back home. Show up, sit back, and enjoy the ride.</p>
-
-
-
-			<h5>Saturday</h5>
-			<h6>Ski, Stay, & Play</h6>
 
 			
 			<p>*Allie’s Cabin and the Christie Lodge are both pet free and smoke free environments.</p>
