adjusted events structure to have 3 columns then detail major sections. Also restructured some main section spacing

--- a/index.html
+++ b/index.html
@@ -26,12 +26,6 @@
 </nav>
 
 <div class="container">
-
-	<!-- <header>
-		<h1 class="press-heavy">Renee &amp; Russell</h1>
-		<h2 class="press-light">March 6, 2015</h2>
-		<h2 class="press-light">Beaver Creek, Colorado</h2>
-	</header> -->
 	
 	<article class="main">
 		
@@ -41,18 +35,13 @@
 
 		<section id="story">
 			<h4>Our Story</h4>
-			<p class="justify">Our story begins in 2010 in a little hair salon in the Lincoln Park neighborhood of Chicago where Renee was working with Sara, Russell’s stepmom. Sara often talked to Renee about Russell, her hilarious and smart stepson who lived in Michigan. Finally, Renee’s interest was peaked, and she decided to send Russell a Facebook message. Over the next few months, Renee and Russell travelled between Michigan and Illinois, and eventually, Russell moved back to his hometown of Chicago. Russell and Renee moved in to a charming little Wicker Park apartment in May of 2012. On Friday, August 30, 2013, Russell and Renee got engaged! After much discussion and exploration, we decided to make Colorado our new home and moved to Broomfield in April of 2014. We are so excited for our future together and can’t wait to share our special day with you!</p>
-
-			<!-- <h4>The Proposal</h4>
-			
-			<p class="justify">On Friday, August 30, 2013, around 3:00, my boss announced that everyone should start the weekend early and head home. I had no idea what I would do with my afternoon, so when I texted Russell and he responded “Nice! What are you going to do? Head home?” I responded, “I don’t know! The world is my oyster!” I decided to just take my time commuting and head home. Normally, the walk from the Blue Line took about 8 minutes – but that day, I was enjoying the weather, so it took about 20. When I arrived at the apartment, I noticed that the door was unlocked. I opened the door, panicked a little, and said “HELLO??” No one answered. I walked inside and was sure I was going to be attacked. I felt that panic for about 20 seconds, until I noticed that music was on and the dishes were done. From behind me, I heard “Hello!” and I turned around and Russell was there. He told me he had a very busy day and suggested we go outside to the backyard. Our apartment had a beautiful garden in the back, and when we walked out I noticed there were flowers and bottles of wine waiting. I immediately started to cry and I’m not even sure if he fully got the words “will you marry me” out before I started screaming “YES!” One of my most favorite things about the day (there are many) was that we kept the moment private for a few hours. We didn’t rush to tell anyone. We opened a bottle of wine, had some drinks, went to dinner, and just reveled in our own excitement for a bit. It was amazing. When we finally started sharing the news, it was so fun to enjoy other people’s excitement! I love Russell so much, he is everything I have ever wanted in a husband, and I am so excited to be his wife!</p> -->
+			<p class="justify">Our story begins in 2010 in a little hair salon in the Lincoln Park neighborhood of Chicago where Renee was working with Sara, Russell’s stepmom. Sara often talked to Renee about Russell, her hilarious and smart stepson who lived in Michigan. Finally, Renee’s interest was peaked, and she decided to send Russell a Facebook message. Over the next few months, Renee and Russell traveled between Michigan and Illinois, and eventually, Russell moved back to his hometown of Chicago. Russell and Renee moved in to a charming little Wicker Park apartment in May of 2012. On Friday, August 30, 2013, Russell and Renee got engaged! After much discussion and exploration, we decided to make Colorado our new home and moved to Broomfield in April of 2014. We are so excited for our future together and can’t wait to share our special day with you!</p>
 		</section>	
 			
 		<section id="party">
 			<h4>The Wedding Party</h4>
 			<h6>Lori Sassali, <em>Officiant</em></h6>
 			<div class="group trial">
-
 				<div class="party-male">
 					<h3>The Men</h3>
 					<ol>
@@ -61,7 +50,6 @@
 						<li>Michael Ripaldi, <em>Usher</em></li>
 					</ol>
 				</div>
-
 				<div class="party-female">
 					<h3>The Women</h3>
 					<ol>
@@ -71,43 +59,28 @@
 					</ol>
 				</div>
 			</div>
-			
 		</section>
 
 		<section id="events">
 			<h4>Wedding Events</h4>
-			
 			<div class="group">
-				<div class="pull">
+				<div class="overview pull">
 					<h3>Welcome Evening</h3>
 					<ol>
 						<li>Thursday, March 5, 2015</li>
 						<li>The Christie Lodge</li>
 						<li>Time TBD</li>
 					</ol>
-					<p>If you plan to arrive on Thursday, we hope you'll join us for a casual and relaxing evening at the lodge. Check back later for more details.</p>
 				</div>
-			
-				<div class="pull">
+				<div class="overview pull">
 					<h3>Wedding Day</h3>
 					<ol>
 						<li>Friday, March 6, 2015</li>
 						<li>Allie's Cabin</li>
 						<li>Sleigh departs at 5:30pm</li>
 					</ol>
-					<p>The ceremony and reception will both take place at Allie’s Cabin on Beaver Creek Mountain.</p>
-					<p>Set amidst a peaceful aspen grove, Allie's Cabin offers fine dining with spectacular views of Beaver Creek Village and the surrounding valley. The cabin is named after Allie Townsend who was known in the 19th century as the "First Lady" of Beaver Creek. She was the widow of George Townsend, the first settler of Beaver Creek.</p>
-					<p>The menu features a myriad of contemporary regional cuisine including prime aged meats, game, fish and fowl. The cabin is hewn from stacked, rough-sawn timber with mountain-style architecture, and features a large, sunny deck adjacent to a quaint bar. The interior is cozy and welcoming, complete with rustic wooden tables, an eclectic collection of fixtures, and furniture evocative of the era in which Allie lived.</p>
-					<p>General Timeline:</p>
-					<ol>
-						<li>5:45 – Sleigh ride up to Allie’s Cabin</li>
-						<li>6:30 - Ceremony</li>
-						<li>7:00 – Dinner and dancing</li>
-					</ol>
-					<p>A shuttle will be available at 5:30 to take guests from The Christie Lodge to Beaver Creek Centennial Station where the sleigh will pick you up. You’ll have the same service on the way back home. Show up, sit back, and enjoy the ride.</p>
 				</div>
-			
-				<div class="pull">
+				<div class="overview pull">
 					<h3>Ski, Stay, & Play</h3>
 						<ol>
 							<li>Saturday, March 7, 2015</li>
@@ -115,8 +88,47 @@
 							<li>You are free all day</li>
 						</ol>
 				</div>
-
 			</div>
+
+
+			<section class="event group">
+				<div class="details pull">
+					<h5>Welcome Evening</h5>
+					<ol>
+						<li>Thursday, March 5, 2015</li>
+						<li>The Christie Lodge</li>
+						<li>Time TBD</li>
+					</ol>
+				</div>
+				<img src="img/christielodge.jpg" class="venue pull">
+				<p class="justify">If you plan to arrive on Thursday, we hope you'll join us for a casual and relaxing evening at the lodge. Check back later for more details.</p>
+			</section>
+
+
+			<section class="event group">
+				<h5>Wedding Day</h5>
+				<div class="details">
+					<ol>
+						<li>Friday, March 6, 2015</li>
+						<li>Allie's Cabin</li>
+						<li>Sleigh departs at 5:30pm</li>
+					</ol>
+				</div>
+				<p class="justify">The ceremony and reception will both take place at Allie’s Cabin on Beaver Creek Mountain. A shuttle will be available to take guests from The Christie Lodge to Beaver Creek where a sleigh will pick you up. You’ll have the same service on the way back home. Show up, sit back, and enjoy the ride.</p>
+			</section>
+
+
+			<section class="event group">
+				<h5>Ski, Stay, & Play</h5>
+				<div class="details">
+					<ol>
+						<li>Saturday, March 7, 2015</li>
+						<li>Vail Valley</li>
+						<li>You are free all day</li>
+					</ol>
+				</div>
+			</section>
+
 
 
 
