added all venue photos and adjusted the ratio

--- a/index.html
+++ b/index.html
@@ -104,29 +104,30 @@
 				<p class="justify">If you plan to arrive on Thursday, we hope you'll join us for a casual and relaxing evening at the lodge. Check back later for more details.</p>
 			</section>
 
-
 			<section class="event group">
-				<h5>Wedding Day</h5>
-				<div class="details">
+				<div class="details pull">
+					<h5>Wedding Day</h5>
 					<ol>
 						<li>Friday, March 6, 2015</li>
 						<li>Allie's Cabin</li>
 						<li>Sleigh departs at 5:30pm</li>
 					</ol>
 				</div>
+				<img src="img/alliescabin.jpg" class="venue pull">
 				<p class="justify">The ceremony and reception will both take place at Allie’s Cabin on Beaver Creek Mountain. A shuttle will be available to take guests from The Christie Lodge to Beaver Creek where a sleigh will pick you up. You’ll have the same service on the way back home. Show up, sit back, and enjoy the ride.</p>
 			</section>
 
 
 			<section class="event group">
-				<h5>Ski, Stay, & Play</h5>
-				<div class="details">
+				<div class="details pull">
+					<h5>Ski, Stay, & Play</h5>
 					<ol>
 						<li>Saturday, March 7, 2015</li>
 						<li>Vail Valley</li>
 						<li>You are free all day</li>
 					</ol>
 				</div>
+				<img src="img/skistayplay.jpg" class="venue pull">
 			</section>
 
 
